--- a/Invitacion-Muestra.html
+++ b/Invitacion-Muestra.html
@@ -42,7 +42,7 @@
         <h2 class="u-align-center u-custom-font u-font-georgia u-text u-text-custom-color-17 u-text-1" data-animation-out="0">VIP PASS</h2>
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-9b0c">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-align-center u-custom-font u-font-lobster u-text u-text-body-alt-color u-text-1" data-animation-out="0"> Glamour Party!!!</h2>
       </div>
     </section>
