--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	  <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <h2 class="u-align-center u-custom-font u-font-lobster u-text
           u-text-body-alt-color u-text-1" data-animation-out="0"> Glamour
-          Party!!!</h2>
+          Party!!</h2>
 	  
 	  </header>
 
